Bump from java8 to java11